--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,6 @@
     "no-console": "warn",
     "prettier/prettier": "warn",
     "prefer-destructuring": ["error", { "object": true, "array": false }],
-    "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val" }]
+    "no-unused-vars": ["warn", { "argsIgnorePattern": "req|res|next|val" }]
   }
 }
